--- a/locales/en/booksAbbrShort.txt
+++ b/locales/en/booksAbbrShort.txt
@@ -1,4 +1,158 @@
 Gen
+Exod
+Lev
+Num
+Deut
+Josh
+Judg
+Ruth
+1 Sam
+2 Sam
+1 Kgs
+2 Kgs
+1 Chr
+2 Chr
+Ezr
+Neh
+Tob
+Jdt
+Esth
+1 Mac
+2 Mac
+Job
+Ps
+Prov
+Eccl
+Song
+Wis
+Sir
+Isa
+Jer
+Lam
+Bar
+Ezek
+Dan
+Hos
+Joel
+Amos
+Obad
+Jonah
+Mic
+Nah
+Hab
+Zeph
+Hag
+Zech
+Mal
+Matt
+Mark
+Luke
+John
+Acts
+Rom
+1 Cor
+2 Cor
+Gal
+Eph
+Phil
+Col
+1 Thess
+2 Thess
+1 Tim
+2 Tim
+Titus
+Phlm
+Heb
+Jas
+1 Pet
+2 Pet
+1 John
+2 John
+3 John
+Jude
+Rev
+
+
+
+
+
+
+You said:
+I also need this new list: Gen
+Exo
+Lev
+Num
+Deu
+Jos
+Jdg
+Rut
+1Sa
+2Sa
+1Ki
+2Ki
+1Ch
+2Ch
+Ezr
+Neh
+Est
+Job
+Psa
+Pro
+Ecc
+Sos
+Isa
+Jer
+Lam
+Eze
+Dan
+Hos
+Joe
+Amo
+Oba
+Jon
+Mic
+Nah
+Hab
+Zep
+Hag
+Zec
+Mal
+Mat
+Mar
+Luk
+Joh
+Act
+Rom
+1Co
+2Co
+Gal
+Eph
+Php
+Col
+1Th
+2Th
+1Ti
+2Ti
+Tit
+Phm
+Heb
+Jam
+1Pe
+2Pe
+1Jo
+2Jo
+3Jo
+Jde
+Rev
+
+
+ChatGPT said:
+
+Thought for a couple of seconds
+nginx
+Copy
+Edit
+Gen
 Exo
 Lev
 Num
