--- a/locales/en/booksAbbrShort.txt
+++ b/locales/en/booksAbbrShort.txt
@@ -1,5 +1,5 @@
 Gen
-Exod
+Ex
 Lev
 Num
 Deut
@@ -8,25 +8,23 @@ Judg
 Ruth
 1 Sam
 2 Sam
-1 Kgs
-2 Kgs
-1 Chr
-2 Chr
-Ezr
+1 Kings
+2 Kings
+1 Chron
+2 Chron
+Ezra
 Neh
 Tob
-Jdt
-Esth
-1 Mac
-2 Mac
+Jud
+Esther
 Job
 Ps
 Prov
-Eccl
+Eccles
 Song
 Wis
 Sir
-Isa
+Is
 Jer
 Lam
 Bar
@@ -36,18 +34,20 @@ Hos
 Joel
 Amos
 Obad
-Jonah
+Jon
 Mic
-Nah
+Nahum
 Hab
 Zeph
 Hag
 Zech
 Mal
-Matt
-Mark
-Luke
-John
+1 Mac
+2 Mac
+Mt
+Mk
+Lk
+Jn
 Acts
 Rom
 1 Cor
@@ -56,165 +56,18 @@ Gal
 Eph
 Phil
 Col
-1 Thess
-2 Thess
+1 These
+2 These
 1 Tim
 2 Tim
-Titus
-Phlm
+Tit
+Philem
 Heb
 Jas
 1 Pet
 2 Pet
-1 John
-2 John
-3 John
+1 Jn
+2 Jn
+3 Jn
 Jude
-Rev
-
-
-
-
-
-
-You said:
-I also need this new list: Gen
-Exo
-Lev
-Num
-Deu
-Jos
-Jdg
-Rut
-1Sa
-2Sa
-1Ki
-2Ki
-1Ch
-2Ch
-Ezr
-Neh
-Est
-Job
-Psa
-Pro
-Ecc
-Sos
-Isa
-Jer
-Lam
-Eze
-Dan
-Hos
-Joe
-Amo
-Oba
-Jon
-Mic
-Nah
-Hab
-Zep
-Hag
-Zec
-Mal
-Mat
-Mar
-Luk
-Joh
-Act
-Rom
-1Co
-2Co
-Gal
-Eph
-Php
-Col
-1Th
-2Th
-1Ti
-2Ti
-Tit
-Phm
-Heb
-Jam
-1Pe
-2Pe
-1Jo
-2Jo
-3Jo
-Jde
-Rev
-
-
-ChatGPT said:
-
-Thought for a couple of seconds
-nginx
-Copy
-Edit
-Gen
-Exo
-Lev
-Num
-Deu
-Jos
-Jdg
-Rut
-1Sa
-2Sa
-1Ki
-2Ki
-1Ch
-2Ch
-Ezr
-Neh
-Est
-Job
-Psa
-Pro
-Ecc
-Sos
-Isa
-Jer
-Lam
-Eze
-Dan
-Hos
-Joe
-Amo
-Oba
-Jon
-Mic
-Nah
-Hab
-Zep
-Hag
-Zec
-Mal
-Mat
-Mar
-Luk
-Joh
-Act
-Rom
-1Co
-2Co
-Gal
-Eph
-Php
-Col
-1Th
-2Th
-1Ti
-2Ti
-Tit
-Phm
-Heb
-Jam
-1Pe
-2Pe
-1Jo
-2Jo
-3Jo
-Jde
 Rev
